2008-02-25  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/universal-cp/action-dialog.c:

	No need to pass error argument to gupnp_service_proxy_begin_action*()
	anymore.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:

	Handle 'TRANSITIONING' state.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:

	Add tooltip to 'clear state' button.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Don't ref the service proxy upon adding a notify on it.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Small cleanup change.

2008-02-14  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Correct a typo in Seek implementation.

2008-02-14  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Try to get the duration from item metadata. This is to deal with
	renderers that do not event 'CurrentMediaDuration' through LastChange.

2008-02-14  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	No need to create the resource hashtable, just use the resources GList.

2008-02-13  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:

	Don't keep the resource hashtable in the playlist treemodel but rather
	create it from metadata before setting the URI on the renderer.

2008-02-13  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Move get_resource_hash() to gupnp-av and rename accordingly.

2008-02-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:
	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h: